# ROS2-Project

./: .gitignore  Makefile  map_aware_risk_diffusion_test.ipynb  run_all.sh  run_gazebo.sh  run_sim_headless.sh  run_train.sh  run_train_v125_cube_safety.sh  run_train_v132_clean.sh  setup_env.sh  waffle_pi.yaml  yolo_person_detection_test.ipynb  yolo_person_gaussian_risk_map.ipynb
src/bayesian_risk_map/: README.md  REAL_ROBOT_COMMANDS.md  package.xml  setup.cfg  setup.py
src/bayesian_risk_map/bayesian_risk_map/: bayesian_risk_map_node.py  opencv_yolo_viewer_node.py
src/bayesian_risk_map/config/: bayesian_risk_map.yaml  turtlebot3_lds_2d_risk_safe.lua  turtlebot3_lds_2d_risk_safe_no_odom.lua
src/bayesian_risk_map/launch/: central_risk_map_bridge.launch.py  pc_risk_debug_monitor.launch.py  pc_robot_risk_stack.launch.py  real_robot_risk_slam.launch.py  robot_risk_source_stack.launch.py
src/bayesian_risk_map/rviz/: bayesian_risk_map.rviz
src/bayesian_risk_map/scripts/: clean_pc_risk_runtime.bash  rviz2_clean_env.bash
src/bayesian_risk_map/test/: test_bearing_consensus.py  test_central_observation_contract.py  test_grid_publish_dedupe.py  test_leader_risk_map_contract.py
src/omx_aim/: package.xml  setup.cfg  setup.py
src/omx_aim/config/: config.yaml  scout_bridge.yaml
src/omx_aim/launch/: desktop.launch.py  jetson.launch.py  sim.launch.py
src/omx_aim/omx/: boundary_gen.py  config.py  controller.py  debug_stream.py.bak  hardware.py  state_machine.py  types.py  yolo_detector.py
src/omx_aim/omx_aim/: auto_initialpose.py  fake_risk_map.py  fake_static_map.py  fire_node.py  ik_teleop.py  map_relay.py  patrol_planner.py  scan_diag.py  scan_processor.py  scout_watchdog.py  target_bridge.py  unified_dashboard.py  waffle_node.py  yolo_node.py
src/omx_aim/test/: test_camera_resilience.py  test_nav_goal_flow.py  test_scan_processor.py  test_state_machine_target_sequence.py
src/region_mapper/: README.md  package.xml  setup.cfg  setup.py
src/region_mapper/launch/: nav2_minimal_navigation.launch.py  region_auto_mapper.launch.py  region_explorer.launch.py  region_graph.launch.py  region_nav2_explorer.launch.py  rviz_region_explorer.launch.py  rviz_region_graph.launch.py  rviz_region_graph_keepalive.launch.py  sim_house_region_graph.launch.py  sim_region_auto_mapper.launch.py  sim_region_nav2_mapper.launch.py
src/region_mapper/region_mapper/: region_auto_mapper_node.py  region_nav2_explorer_node.py  slam_region_graph_node.py
src/region_mapper/rviz/: region_graph.rviz  region_nav2_mapper.rviz
src/region_mapper/scripts/: run_auto_mapper_domain22.zsh  run_core_domain22.zsh  run_nav2_mapper_domain22.zsh  run_rviz_auto_mapper_domain22.zsh  run_rviz_nav2_mapper_domain22.zsh
src/scout_map_risk_bridge/: README.md  package.xml  setup.cfg  setup.py
src/scout_map_risk_bridge/launch/: scout_map_risk_bridge.launch.py  scout_map_risk_bridge_21_to_20.launch.py  scout_map_risk_bridge_24_to_23.launch.py  scout_map_risk_bridge_view_21_to_20.launch.py  scout_map_risk_bridge_view_24_to_23.launch.py  scout_map_risk_receiver_rviz.launch.py
src/scout_map_risk_bridge/rviz/: scout_map_risk_receiver.rviz
src/scout_map_risk_bridge/scout_map_risk_bridge/: scout_map_risk_bridge_node.py
src/scout_map_risk_bridge/scripts/: run_rviz2_clean.bash
src/system_bringup/: README.md  package.xml  requirements-rl.txt  setup.cfg  setup.py
src/system_bringup/config/: fleet_registry.yaml  house_motion_test.yaml  scout_rl_policy_contract.json
src/system_bringup/launch/: field_robot.launch.py  pc.launch.py  pc_remote_rl.launch.py  scout_rl_debug_view.launch.py  scout_rl_inference.launch.py  system.launch.py  system_house_motion_test.launch.py  viewer.launch.py
src/system_bringup/rviz/: scout_rl_debug.rviz  system_view.rviz
src/system_bringup/static/: dashboard.css  dashboard.js
src/system_bringup/system_bringup/: __init__.py  active_field_source_mux.py  fleet_registry.py  launch_defaults.py  leader_shadow_follow.py  leader_unified_dashboard.py  motion_authority.py  nav_goal_manager.py  rl_activation_gate.py  rl_policy_contract.py  role_contract.py  scout_failover_coordinator.py  scout_rl_policy_worker.py  scout_rl_runtime.py  scout_takeover_agent.py  system_readiness_monitor.py  takeover_map_exporter.py  takeover_stack_manager.py  unified_field_robot.py
src/system_bringup/templates/: dashboard.html
src/system_bringup/test/: test_active_field_source_mux.py  test_dashboard_static.py  test_field_robot_architecture.py  test_fleet_registry.py  test_motion_authority.py  test_pc_remote_rl_launch.py  test_rl_policy_contract.py  test_role_contract.py  test_runtime_structure_static.py  test_scout_failover_coordinator.py  test_scout_rl_runtime.py  test_system_launch_formation.py  test_system_readiness_monitor.py  test_takeover_map_exporter.py  test_unified_field_robot.py
src/tb3_bayesian_risk_map/: README.md  REAL_ROBOT_COMMANDS.md  package.xml  setup.cfg  setup.py
src/tb3_bayesian_risk_map/config/: bayesian_risk_map.yaml  turtlebot3_burger_no_odom_tf.yaml  turtlebot3_lds_2d_risk_safe.lua  turtlebot3_lds_2d_risk_safe_no_odom.lua
src/tb3_bayesian_risk_map/launch/: bayesian_risk_map.launch.py  cartographer_risk_rviz.launch.py  central_risk_map_bridge.launch.py  central_risk_map_domain20.launch.py  opencv_yolo_view.launch.py  pc_risk_debug_monitor.launch.py  pc_robot_risk_stack.launch.py  real_robot_risk_slam.launch.py  (+5 more)
src/tb3_flask_yolo_bridge/: package.xml  setup.cfg  setup.py
src/tb3_fleet_bridge/: package.xml  setup.cfg  setup.py
src/tb3_fleet_bringup/: README.md  RUN_COMMANDS_FIXED.md  package.xml  setup.cfg  setup.py
src/tb3_fleet_master/: package.xml  setup.cfg  setup.py
src/tb3_fleet_robot/: package.xml  setup.cfg  setup.py
src/tb3_multi/: README_MULTI_TB3_GZ.md  README_OPEN_AREA_SPAWN.md  README_RESCUE_IDLE_MODE.md  README_SAFE_INSIDE_SPAWN.md  package.xml  setup.cfg  setup.py
src/tb3_system_bringup/: README.md  package.xml  setup.py
src/tb3_visibility_explorer/: README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_rl_training/: package.xml  setup.cfg  setup.py
(+434 files in other folders)
