<?xml version="1.0"?>
<package format="3">
  <name>scout_map_risk_bridge</name>
  <version>0.4.0</version>
  <description>Bridge scout map and risk map across ROS 2 domains.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
