<?xml version="1.0"?>
<package format="3">
  <name>system_bringup</name>
  <version>0.1.0</version>
  <description>Role-based orchestrator: turns on fleet bringup, the scout's Bayesian risk map and its RL policy (or the leader's fleet stack) from one launch file.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>fleet_bringup</exec_depend>
  <exec_depend>bayesian_risk_map</exec_depend>
  <exec_depend>flask_yolo_bridge</exec_depend>
  <exec_depend>omx_aim</exec_depend>
  <exec_depend>turtlebot3_rl_training</exec_depend>
  <exec_depend>domain_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
