<?xml version="1.0"?>
<package format="3">
  <name>tb3_flask_yolo_bridge</name>
  <version>0.1.0</version>
  <description>Send ROS camera frames to a Flask YOLO server and publish compact detection JSON for risk mapping.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tb3_fleet_bringup</exec_depend>
  <exec_depend>tb3_bayesian_risk_map</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
