<?xml version="1.0"?>
<package format="3">
  <name>tb3_fleet_bridge</name>
  <version>0.2.0</version>
  <description>domain_bridge configuration package for TB3 fleet topics.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>domain_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
