<?xml version="1.0"?>
<package format="3">
  <name>tb3_fleet_master</name>
  <version>0.2.0</version>
  <description>Fleet master commander for multi-TurtleBot3 group goals.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
