<?xml version="1.0"?>
<package format="3">
  <name>tb3_system_bringup</name>
  <version>0.1.0</version>
  <description>Role-based orchestrator: turns on fleet bringup, the scout's Bayesian risk map and its RL policy (or the leader's fleet stack) from one launch file.</description>
  <maintainer email="qhals8380@gmail.com">bomin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tb3_fleet_bringup</exec_depend>
  <exec_depend>tb3_bayesian_risk_map</exec_depend>
  <exec_depend>turtlebot3_rl_training</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
